client/src/css/App.css
/*--------------------------------------------*
remove browser autofill
*--------------------------------------------*/
@keyframes autofill {
  to {
    color: #666;
    background: transparent;
  }
}

@font-face {
  font-family: helveticaNeueLtThinCn;
  src: url(/fonts/helveticaneueltthincn.ttf);
}

input:-webkit-autofill {
  -webkit-animation-name: autofill;
  animation-name: autofill;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

textarea:focus,
input:focus,
button:focus {
  outline: none !important;
  box-shadow: none !important;
}

/*--------------------------------------------*
global style for all pages
*--------------------------------------------*/
.app {
  width: 100%;
  height: 100%;
}

.title {
  text-align: center;
  margin-bottom: 5%;
}

.collapsed {
  padding-left: 90px;
}

.expanded {
  padding-left: 350px;
}

.custom-input-group {
  margin-bottom: 20px;
}

.form-control {
  background-color: transparent;
  border: 0;
  border-bottom: 1px solid #0f1929;
  border-radius: 0px;
  margin-bottom: 20px;
  transition: none;
}

.form-control:active {
  background-color: transparent;
  border-bottom: 1px solid rgb(219, 157, 12);
}

.form-control:focus {
  background-color: transparent;
  border-bottom: 1px solid rgb(219, 157, 12);
}

.input-group-text {
  background-color: transparent;
  border: 0px;
}

.custom-input-group-addon {
  border: 0;
  border-bottom: 2px solid rgba(15, 25, 41, 0.1);
}

.input-icon {
  width: 20px;
  height: 20px;
  margin-top: auto;
  margin-bottom: auto;
}

.search-field {
  display: flex;
  justify-content: center;
  max-width: 300px;
  min-width: 300px;
}

@media only screen and (max-width: 1200px) {
  .collapsed {
    padding-left: 0px;
  }
}

